--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Thomas Kipf | PhD Student @ University of Amsterdam</title>
+	<title>Matt Robinson | Aspiring race car passenger</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
