--- a/index.html
+++ b/index.html
@@ -29,29 +29,21 @@
 	<script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
 
+	
 <body class="landing">
 
 	<!-- Header -->
 	<header id="header">
 		<ul class="icons">
 			<li>
-				<a href="https://scholar.google.com/citations?user=83HL5FwAAAAJ" class="icon fa-graduation-cap"></a>
-			</li>
-			<li>
-				<a href="https://github.com/tkipf" class="icon fa-github"></a>
-			</li>
-			<li>
-				<a href="https://twitter.com/thomaskipf" class="icon fa-twitter"></a>
-			</li>
-			<li>
-				<a href="https://www.linkedin.com/in/thomas-kipf-6b260410a" class="icon fa-linkedin"></a>
+				<a href="https://github.com/mc-robinson" class="icon fa-github"></a>
 			</li>
 		</ul>
 		<nav id="nav">
 			<ul>
 				<li><a href="/" class="active">Home</a></li>
-				<li><a href="/#two">Publications</a></li>
-				<li><a href="/graph-convolutional-networks/">Blog</a></li>
+				<!--<li><a href="/#two">Publications</a></li>-->
+				<!--<li><a href="/graph-convolutional-networks/">Blog</a></li>-->
 				<li><a href="/#footer">Contact</a></li>
 			</ul>
 		</nav>
@@ -63,13 +55,14 @@
 			<div class="row 200%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>Thomas Kipf</h2>
+						<h2>Matt Robinson</h2>
 						<p>
-							<div class="image rounded" style="margin-bottom: 1.5em;"><img src="images/photo.jpg" width="200" alt="" /></div>
+							<!--<div class="image rounded" style="margin-bottom: 1.5em;"><img src="images/photo.jpg" width="200" alt="" /></div>-->
 						</p>
-						<p>PhD candidate</p>
-						<p>University of Amsterdam</p>
+						<p></p>
+						<p></p>
 					</header>
+				<!--
 				</div>
 				<div class="6u$ 12u$(medium)">
 					<p>I am a third-year PhD student in Machine Learning at the University of Amsterdam, advised by <a href="https://staff.fnwi.uva.nl/m.welling/" target="_blank">Prof. Max Welling</a>. My main area of interest is learning with structured data and structured representations/computations. This includes topics in reasoning, (multi-agent) reinforcement learning, and structured deep generative models.</p>
@@ -77,9 +70,10 @@
 					<p>My formal background is in Physics (M.Sc. hons. 2016, B.Sc. 2014 at <a href="https://www.fau.eu/" target="_blank">FAU</a>). During my studies, I have had exposure to a number of fields and&mdash;after a short interlude in Neuroscience-related research
 						at the <a href="http://brain.mpg.de/research/helmstaedter-department.html" target="_blank">Max Planck Institute for Brain Research</a>&mdash;eventually found my way into Machine Learning.</p>
 				</div>
+				-->
 			</div>
 		</div>
-
+		<!--
 		<div class="container 75%">
 			<h3 style="text-align: center">News</h3>
 			<ul>
@@ -92,9 +86,10 @@
 				<li>2017: In the summer of 2017, I interned at Apple in <a href="https://homes.cs.washington.edu/~guestrin/index.html">Carlos Guestrin</a>'s Machine Learning team. I worked on self-attention models for sequence tagging and classification.</li>
 			</ul>
 		</div>
+		-->
 	</section>
 
-	<!-- Two -->
+	<!-- 
 	<section id="two" class="wrapper style2">
 		<div class="container 75%">
 			<h2 style="text-align: center">Selected Publications</h2>
@@ -240,9 +235,9 @@
 			<p style="text-align:center;">For a full list, have a look at my <a href="https://scholar.google.com/citations?user=83HL5FwAAAAJ">Google Scholar</a> page.</p>
 		</div>
 	</section>
+	-->
 
-
-	<!-- Three -->
+	<!--
 	<section id="three" class="wrapper style3 special">
 		<div class="container 50%">
 
@@ -252,30 +247,21 @@
 			</ul>
 		</div>
 	</section>
-
+	-->
 
 	<!-- Footer -->
 	<footer id="footer">
 		<div class="container">
 			<h2>Get in touch</h2>
-			<p><span style="font-weight: bold">THOMAS [DOT] KIPF [AT] GMAIL [DOT] COM</span><br /> Amsterdam Machine Learning Lab, University of Amsterdam<br />Science Park 904, 1098 XH Amsterdam, The Netherlands</p>
+			<p><span style="font-weight: bold">MATTHEW [DOT] 67 [DOT] ROBINSON [AT] GMAIL [DOT] COM</span>
 			<p></p>
 			<ul class="icons">
 				<li>
-					<a href="https://scholar.google.com/citations?user=83HL5FwAAAAJ" class="icon fa-graduation-cap"></a>
-				</li>
-				<li>
-					<a href="https://github.com/tkipf" class="icon fa-github"></a>
-				</li>
-				<li>
-					<a href="https://twitter.com/thomaskipf" class="icon fa-twitter"></a>
-				</li>
-				<li>
-					<a href="https://www.linkedin.com/in/thomas-kipf-6b260410a" class="icon fa-linkedin"></a>
+					<a href="https://github.com/mc-robinson" class="icon fa-github"></a>
 				</li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; 2018 Thomas Kipf</li>
+				<li>&copy; 2018 Matt Robinson</li>
 				<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
 			</ul>
 		</div>
